# Finetune

./: .gitignore  README.md  config.py  load_model.py  merge_lora.py  pretrain.py  pyproject.toml  train.py
data/: test-00000-of-00001.parquet
