[project]
name = "qwen-lora"
version = "0.1.0"
description = "Qwen3-0.6B QLoRA 微调示例，基于 Hugging Face、TRL 和 PEFT。"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "accelerate>=1.0.0",
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "modelscope>=1.38.1",
    "peft>=0.17.0",
    "swanlab>=0.9.0",
    "tensorboard>=2.20.0",
    "transformers>=4.56.0",
    "trl>=0.23.0",
]
